# Table-docking-ROS

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/: docking.launch  move_base.launch  rviz_navigation.launch  simple_robot_gazebo.launch  task.launch
launch/include/: move_base.xml
rviz/: navigation.rviz
src/: controller.cpp  laser2pc.cpp  sendgoal.cpp
urdf/: omnibot.urdf
world/: docking.world
